--- a/app.json
+++ b/app.json
@@ -40,7 +40,11 @@
     "extra": {
       "router": {
         "origin": false
+      },
+      "eas": {
+        "projectId": "bbdb2058-af2b-4f6d-9812-f9130cd135b3"
       }
-    }
+    },
+    "owner": "alvescleiton"
   }
 }
